[package]
name = "cub-ip-app"
version = "0.1.0"
authors = ["Maksim Tsvetkov <max.tsvetkov@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
quick-xml = { version = "0.22", features = ["serialize"] }
serde = { version = "1.0.130", features = ["derive"] }
base64 = "0.13"
paho-mqtt = "0.9"
anyhow = "1.0.48"
log = "0.4.14"
env_logger = "0.9.0"
futures = "0.3.18"
config = "0.11.0"
clap = "2.34.0"
parse_duration = "2.1.1"